--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             {name: "I LIKE MONEY", file: "money.mp3", style: "purple-button"},
             {name: "ARE YOU LISTENING", file: "LISTENING.mp3", style: "red-button"},
             {name: "CRAZY TALK", file: "CRAZY TALK.mp3", style: "pink-button"},
-            {name: "VILLAGER", file: "villager.mp3", style: "teal-button"},
+            {name: "VILLAGER", file: "VILLAGER.mp3", style: "teal-button"},
 
 
         ];
