--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <span id="token-count">You have 0 tokens</span>
             <span id="infinite-indicator" class="infinite-mode" style="display: none;">⚡ INFINITE MODE ⚡</span>
         </div>
-        <input type="text" id="token-input" class="token-input" placeholder="Enter secret code">
+        <input type="password" id="token-input" class="token-input" placeholder="Enter secret code">
         <button id="token-submit" class="token-button">Get Tokens</button>
     </div>
     
